[V2.1.1] FIX:1 Blur on Mobile Devices

--- a/v2/css/product.css
+++ b/v2/css/product.css
@@ -25,6 +25,7 @@ a:hover {
     background: rgba(255, 255, 255, 0.07);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 ul {
@@ -91,6 +92,7 @@ p {
     background: rgba(255, 255, 255, 0.07);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .card .images{
