--- a/v2/css/productStyle.css
+++ b/v2/css/productStyle.css
@@ -8,6 +8,7 @@
     background: rgba(255, 255, 255, 0.07);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 section{
@@ -42,6 +43,7 @@ section{
     background: rgba(255, 255, 255, 0.07);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .container .card .images{
